--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,9 +25,11 @@ figcaption {
 }
 
 img {
-	object-fit:contain;
-	height: 100%;
-	width: 100%;
+	max-width: 100%;
+	height: auto;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .tiledFigures {
